# torchdyno

./: .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build_and_deploy.yaml  build_and_deploy_test.yaml  ci.yaml
docs/: index.rst
docs/source/overview/: index.rst
tests/: test_benchmark.py  test_benchmark_datasets.py  test_benchmark_eval.py  test_benchmark_hpo.py  test_benchmark_report.py  test_benchmark_wesad_hhar.py  test_dense_head.py  test_esn_end_to_end.py  test_metrics.py  test_model.py  test_registry.py  test_registry_mechanism.py  test_reproducibility.py  test_smoke.py  test_tasks.py  test_testing.py  test_unified_training.py
tests/data/: test_lazy_datasets.py  test_missing_extra_message.py
tests/heads/: test_classification.py  test_regression.py
tests/models/: test_base.py  test_esn_core.py
tests/models/assembly/: test_adadiag.py  test_adadiag_training.py  test_common.py  test_exports.py  test_frequency_gate.py  test_scn.py
tests/models/esn/: test_reservoir_hook.py
tests/models/ode/: test_cornn_core.py  test_cornn_core_frozen.py  test_cornn_integration.py
tests/models/ssm/: test_lru_core.py  test_lru_core_frozen.py  test_lru_integration.py  test_s4d_core.py  test_s4d_integration.py
tests/nn/: test_discretize.py  test_init.py  test_parametrize.py  test_scan.py
tests/optim/: test_adapters.py  test_ip_adapter.py  test_ridge.py
tests/training/: test_backprop.py  test_base.py  test_exports.py
torchdyno/: __init__.py  model.py  registry.py  reproducibility.py  testing.py
torchdyno/benchmark/: __init__.py  dataset.py  datasets.py  hpo.py  report.py  runner.py  spec.py
torchdyno/data/datasets/: __init__.py
torchdyno/heads/: __init__.py  base.py  classification.py  dense.py  regression.py
torchdyno/metrics/: __init__.py  base.py  classification.py  regression.py
torchdyno/models/: __init__.py  base.py  initializers.py
torchdyno/models/assembly/: __init__.py  _common.py  adadiag.py  scn.py
torchdyno/models/esn/: __init__.py  core.py  reservoir.py
torchdyno/models/ode/: __init__.py  cornn.py
torchdyno/models/ssm/: __init__.py  base.py  core.py  lru.py  s4d.py
torchdyno/nn/: __init__.py  discretize.py  init.py  parametrize.py  scan.py
torchdyno/optim/: __init__.py  adapters.py  intrinsic_plasticity.py  ridge.py
torchdyno/tasks/: __init__.py  base.py  classification.py  regression.py
torchdyno/training/: __init__.py  backprop.py  base.py
