[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "torchdyno"
description = "A PyTorch-based library for Reservoir Computing and dynamical systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Valerio De Caro", email = "valerio.decaro@di.unipi.it" }]
maintainers = [
    { name = "Valerio De Caro", email = "valerio.decaro@di.unipi.it" },
    { name = "Geremia Pompei", email = "geremiapompei@gmail.com" },
]
keywords = [
    "reservoir-computing",
    "recurrent-neural-networks",
    "time-series",
    "pytorch",
    "dynamical-systems",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.4",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    # pandas/torchvision are TEMPORARILY core deps so `import torchdyno` keeps
    # working at every commit. Task 4 moves them into a [datasets] extra once the
    # lazy dataset imports (Task 3) are in place. Do not define that extra yet.
    "pandas>=2.2.3",
    "torchvision>=0.19",
]

[project.urls]
Homepage = "https://github.com/vdecaro/torchdyno"
Documentation = "https://torchdyno.readthedocs.io/en/latest/"
Repository = "https://github.com/vdecaro/torchdyno"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pycln>=2.4.0",
    "pylint>=3.3.1",
    "mypy>=1.13.0",
    "docformatter[tomli]>=1.7.5",
    "commitizen>=3.30.1",
    "pre-commit>=4.0.1",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-book-theme>=1.1.3",
    "jinja2>=3.1.4",
    "docformatter[tomli]>=1.7.5",
    "sphinx-autobuild>=2024.10.3",
    "enum-tools[sphinx]>=0.12.0",
    "sphinx-favicon>=1.0.1",
    "sphinx-design>=0.6.1",
    "myst-parser>=4.0.0",
    "sphinx-icon>=0.2.2",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["torchdyno"]

# torch/torchvision resolved from an explicit CPU index for reproducible dev/CI
# installs. These [tool.uv.*] sections are uv-only and are NOT part of the
# published wheel metadata, so end users installing from PyPI still get the
# default wheel for their platform (GPU users bring their own).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_provider = "scm"
update_changelog_on_bump = true

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
filter_files = true
skip = ["__init__.py"]

[tool.docformatter]
recursive = true
black = true
diff = true
tab-width = 4

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]
